[gd_scene load_steps=4 format=3 uid="uid://cbmver0ijwwvx"]

[ext_resource type="Script" uid="uid://c3aianj30e4kk" path="res://scripts/level_up_menu.gd" id="1_2v68v"]
[ext_resource type="Texture2D" uid="uid://fhpnkym35trp" path="res://assert/level up menu.png" id="2_gj4x1"]
[ext_resource type="FontFile" uid="uid://rvbi0c82jvgo" path="res://assert/PixelatedEleganceRegular-ovyAA.ttf" id="3_55dgt"]

[node name="LevelUpMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -224.0
offset_right = 56.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(577, 339)
script = ExtResource("1_2v68v")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 86.0
offset_right = 808.0
offset_bottom = 548.0
pivot_offset = Vector2(241, 246)
color = Color(1, 0.635294, 0.278431, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(563, 431)
scale = Vector2(0.221011, 0.215261)
texture = ExtResource("2_gj4x1")

[node name="Upgrade1" type="Button" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 359.0
offset_right = 705.0
offset_bottom = 439.0
pivot_offset = Vector2(173, 52)
theme_override_fonts/font = ExtResource("3_55dgt")

[node name="Upgrade3" type="Button" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 461.0
offset_right = 705.0
offset_bottom = 537.0
pivot_offset = Vector2(166, 50)
theme_override_fonts/font = ExtResource("3_55dgt")

[node name="Upgrade2" type="Button" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 261.0
offset_right = 704.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("3_55dgt")

[connection signal="pressed" from="Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="Upgrade3" to="." method="_on_upgrade_3_pressed"]
[connection signal="pressed" from="Upgrade2" to="." method="_on_upgrade_2_pressed"]
